renaissance/css/themes/LD/common.css
/* LAYER: theme.ld */

/* This style sheet is partially based on:

   Minimal style sheet for the HTML output of Docutils created by Günter Milde (2022-06-19) which in turn is based on html4css1.css by
   David Goodger (2015, 2021).
*/

object:has(+ *),
ld-grid:has(+ *),
div.compound:has(+ *),
div.container:has(+ *),
p:has(+ *),
blockquote:has(+ *) {
    margin-bottom: var(--default-bottom-margin);
}

object[role="img"] {
    display: block;

    &.opaque {
        background-color: var(--current-background-color);
    }
}

ul {
    list-style-type: "▫️";
}

.epigraph {
    font-family: var(--theme-serif-font-family);
    font-style: italic;
    font-variant-ligatures: additional-ligatures;
}

ld-deck {
    &:has(+ *) {
        margin-bottom: var(--default-bottom-margin);
    }

    &.numbered {
        counter-reset: deck;

        &.from-zero {
            counter-reset: deck -1;
        }

        > ld-card {
            counter-increment: deck;

            position: relative;
            margin-top: 1em;

            border-top: thin solid var(--dark-gray);
            padding-top: 0.75em;

            &::before {
                display: inline-block;
                position: absolute;
                top: 0em;
                right: 0em;
                padding: 0.05em 0.25em;
                content: counter(deck);
                border-right: thin solid var(--dark-gray);
                background-color: var(--dark-gray);
                color: var(--white);
                text-shadow: -1px -1px 2px var(--light-gray);
                border-radius: 0 0 0 0.5em;
            }
        }
    }
}

ld-grid {
    /*  The default layout is (at the moment) a flex based layout. */
    &.default-layout {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-between;
        align-items: flex-start;
        gap: 1em;

        > ld-cell {
            display: block;
        }
    }
}

/*  ----------------------------------------------------------------------------
    Adds the styling for the functionality to copy code to the clipboard.

    The base functionality is implemented in LectureDoc.
*/
.code.copy-to-clipboard {
    position: relative;

    /*  The DIV with the class ".ld-copy-to-clipboard-button" is added by
        programmatically by LectureDoc. */
    .ld-copy-to-clipboard-button {
        content: url(copy_to_clipboard.svg);
        width: 27px;
        height: 27px;

        position: absolute;
        right: 18px;
        top: 18px;

        opacity: 0;
        transition: 500ms;
    }

    &:hover .ld-copy-to-clipboard-button {
        opacity: 1;
        transition: 750ms;
    }
}

/* Lists */

ul.horizontal {
    display: flex;
    gap: 0em 2em;
    flex-wrap: wrap;
    align-content: flex-start;
    align-items: flex-start;
}

/*  Provides a very simple means to "misuse" a list to arrange content in
    columns.

    In rst it has to be used like so:

    .. class:: columns (left-aligned-columns|evenly-spaced-columns)?

    - first column
    - second column
    - ...
*/
ul.columns {
    /* TODO Consolidate columns and column-list! */
    list-style: none;

    display: flex;
    padding: 0;
    margin: 0;

    gap: 1em;

    align-items: flex-start;

    justify-content: space-between;

    &.evenly-spaced {
        justify-content: space-evenly;
    }
    &.left-aligned {
        justify-content: flex-start;
    }

    li {
        margin-bottom: 0;
    }
}

/* compact and simple lists: no margin between items */
li,
.simple li,
.simple ul,
.simple ol,
.compact li,
.compact ul,
.compact ol,
.simple > li p,
dl.simple > dd,
.compact > li p,
dl.compact > dd {
    margin-top: 0em;
    margin-bottom: 0.25em;
}

/*
    This style is complementary to the previous one and adds a pop-out effect
    on hover.

    TODO Add relay to other windows
*/
:is(ol, ul):has(> .pop-out-on-hover) {
    perspective: 500px;
    transform-style: preserve-3d;
    overflow: visible;

    > li {
        transition: 0.5s;

        &::before {
            transition: 0.5s;
        }

        &.\:hover {
            transform: translateZ(15px);
            transition: 0.5s;

            &::before {
                transition: 0.5s;
            }
        }
    }
}

ul.negative-list > li, /* TODO rename: attention-list (see below)*/
ul > li.negative-list {
    list-style-type: "❗️";
}

ul.positive-list > li, /* TODO rename: check-list*/
ul > li.positive-list {
    list-style-type: "✓";
}

ul.question-list > li, /* TODO rename: */
ul > li.question-list {
    list-style-type: " ? ";
}

ul.attention-list > li, /* TODO rename: */
ul > li.attention-list {
    list-style-type: "⚡️";
}

.list-with-explanations > li > *:not(:first-child) {
    margin-top: -0.3em;
    font-size: smaller;
    color: var(--dark-gray);
    mix-blend-mode: hard-light;
}
.list-with-details > li > *:not(:first-child) {
    font-size: smaller;
}
.list-with-sublists > li > :is(ol, ul) {
    margin: 0;
    font-size: smaller;
}

ul {
    list-style-position: outside;
    padding-left: 0.85em;
}

ol.loweralpha {
    list-style: lower-alpha;
    list-style-position: outside;
    padding-left: 0em;
    margin-left: 1.5em;
}

ol.upperalpha {
    list-style: upper-alpha;
}

ol.lowerroman {
    list-style: lower-roman;
}

ol.upperroman {
    list-style: upper-roman;
    list-style-position: outside;
    padding-left: 0em;
    margin-left: 1.5em;
}

ol.arabic {
    list-style: decimal;
    list-style-position: outside;
    padding-left: 1.5em;
}

ol.arabic.long-list {
    list-style-position: outside;
    padding-left: 2.25em;
}

li {
    padding-left: 0em;
}

/* Definition Lists and Derivatives */
dt .classifier {
    font-style: italic;
}

dt .classifier:before {
    font-style: normal;
    margin: 0.5em;
    content: ":";
}
/* ... */

